# AnComicsViewer

./: .gitignore  ANNOTATION_GUIDE.md  ARCHIVE_README.md  AR_INTEGRATION_ARCHIVE_README.md  AnComicsViewer.py  CODE_REVIEW_SUMMARY.md  COMMIT_SUMMARY.md  COORDINATE_FIX.md  COPILOT_TASK_COMPLETION.md  Detection_Modes_Guide.md  EXACT_CODE_CHANGES.md  FEATURE_IMPLEMENTATION.md  GUTTER_IMPROVEMENTS_V2.md  IMPLEMENTATION_DIFF.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  ML_ROADMAP.md  MULTIBD_ENHANCED.md  MULTIBD_RETRAIN_SUCCESS.md  PANEL_MODE_IMPLEMENTATION.md  PATCHES_DROPIN_ULTRA_ROBUST_REPORT.md  PERFORMANCE_REPORT.md  README.md  README_NEW.md  README_SETUP.md  README_ULTIMATE.md  RELEASE_NOTES_AUTO.md  RESTRUCTURE_SUMMARY.md  SECURITY_IMPROVEMENTS.md  TESTING_GUIDE.md  YOLO28H_ARCHIVE_REPORT.md  YOLO28H_SIMPLIFIED_README.md  add_tintin.py  analyze_all_annotations.py  analyze_annotations.py  analyze_golden_city.py  analyze_model_confidence.py  analyze_page5_detailed.py  analyze_page6_visual.py  (+170 more)
ancomicsviewer/: __init__.py  __main__.py  async_detection.py  cache.py  config.py  detector.py  dialogs.py  image_utils.py  main_window.py  panel_editor.py  pdf_view.py
archive_core/: README.md  create_complete_archive.py  create_minimal_core.py  create_simple_archive.py  test_paths.py
backup_annotations_20250822_182146/: p0001.json  p0004.json  p0006.json  p0007.json  p0009.json  p0010.json  p0011.json  p0013.json  p0016.json  p0017.json  p0019.json  p0021.json  p0022.json  p0023.json  p0024.json  p0025.json  p0026.json  p0027.json  p0028.json  p0029.json  p0030.json  p0031.json  p0032.json  p0033.json  p0034.json  p0036.json  p0037.json  p0038.json  p0039.json  p0042.json  p0044.json  p0046.json  p0047.json  p0049.json  pinup_p0001.json  pinup_p0003.json  pinup_p0005.json  pinup_p0006.json  pinup_p0007.json  pinup_p0008.json  (+162 more)
comics-reader-web/: README.md  next.config.ts  package-lock.json  package.json
config/: detect.yaml  detect_100percent.yaml  detect_100percent_main_test.yaml  detect_ultimate.yaml  tiling_augmentation.yaml  train_optimized_250ep_1024px.yaml
dataset/: multibd_enhanced.yaml  predefined_classes.txt
dataset_improved/: data.yaml  labels.cache  prepare_dataset.py  train.sh  validate_model.py
debug_100percent_calibrated/: page_1757207747_after_merging.json  page_1757207747_final_result.json  quality_metrics_page_1757207747.json
detectors/: yolo_seg.py  (+1 more)
(+602 files in other folders)
